feat: add commerce tools sdk dependencies Add .env file with some constants to project root

--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@commercetools/platform-sdk": "^7.8.0",
+    "@commercetools/sdk-client-v2": "^2.5.0",
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.5",
     "@vitejs/plugin-react": "^4.2.1",
