--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "format": "prettier --write 'src/**/*.{ts,tsx,css}'",
     "ci:format": "prettier --check 'src/**/*.{ts,tsx,css}'",
     "lint": "eslint ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "lint:fix": "eslint --fix ./src --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "test": "vitest",
     "prepare": "husky"
