--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@testing-library/jest-dom": "^6.4.2",
     "@testing-library/react": "^15.0.5",
     "@vitejs/plugin-react": "^4.2.1",
+    "antd": "^5.17.3",
     "node-fetch": "^3.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -36,6 +37,7 @@
     "react-router-dom": "^6.23.0",
     "react-router-hash-link": "^2.4.3",
     "react-select": "^5.8.0",
+    "uuid": "^9.0.1",
     "vite": "^5.2.10",
     "vite-plugin-node-polyfills": "^0.21.0",
     "vitest": "^1.5.2"
@@ -45,6 +47,7 @@
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
     "@types/react-router-hash-link": "^2.4.9",
+    "@types/uuid": "^9.0.8",
     "@typescript-eslint/eslint-plugin": "^7.7.1",
     "@typescript-eslint/parser": "^7.7.1",
     "eslint": "^8.2.0",
